# mara_moveit_tutorials

./: CMakeLists.txt  README.md  package.xml
lessons/collision_environments/scripts/: collision_scene_example.py
lessons/interactivity/: CMakeLists.txt
lessons/interactivity/include/interactivity/: imarker.h
lessons/interactivity/launch/: attached_body_tutorial.launch  interactivity_tutorial.launch
lessons/interactivity/src/: attached_body_tutorial.cpp  interactive_robot.cpp  interactivity_tutorial.cpp
lessons/motion_planning_api/: CMakeLists.txt
lessons/motion_planning_api/launch/: motion_planning_api_tutorial.launch
lessons/motion_planning_api/src/: motion_planning_api_tutorial.cpp
lessons/motion_planning_pipeline/: CMakeLists.txt
lessons/motion_planning_pipeline/launch/: motion_planning_pipeline_tutorial.launch
lessons/motion_planning_pipeline/src/: motion_planning_pipeline_tutorial.cpp
lessons/move_group_interface/: CMakeLists.txt
lessons/move_group_interface/launch/: move_group_interface_tutorial.launch
lessons/move_group_interface/src/: move_group_interface_tutorial.cpp
lessons/move_group_python_interface/launch/: move_group_python_interface_tutorial.launch
lessons/move_group_python_interface/scripts/: move_group_python_interface_tutorial.py
lessons/pick_place/: CMakeLists.txt
lessons/pick_place/src/: pick_place_tutorial.cpp
lessons/planning_scene/: CMakeLists.txt
lessons/planning_scene/launch/: planning_scene_tutorial.launch
lessons/planning_scene/src/: planning_scene_tutorial.cpp
lessons/planning_scene_ros_api/: CMakeLists.txt
lessons/planning_scene_ros_api/launch/: planning_scene_ros_api_tutorial.launch
lessons/planning_scene_ros_api/src/: planning_scene_ros_api_tutorial.cpp
lessons/robot_model_and_robot_state/launch/: robot_model_and_robot_state_tutorial.launch
lessons/robot_model_and_robot_state/src/: robot_model_and_robot_state_tutorial.cpp
lessons/visualizing_collisions/launch/: moveit.rviz  visualizing_collisions_tutorial.launch
lessons/visualizing_collisions/src/: visualizing_collisions_tutorial.cpp
src/: move_group_interface_tutorial.cpp
tutorials/move_group_interface/: CMakeLists.txt
tutorials/move_group_interface/src/: move_group_interface_tutorial.cpp
tutorials/pick_place/: CMakeLists.txt
tutorials/pick_place/src/: pick_place_tutorial.cpp
