<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>mara_moveit_tutorials</name>
  <version>0.0.0</version>
  <description>The mara_moveit_tutorials package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alex@erlerobotics.com">Alejandro</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <author>Alejandro Hernandez</author>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- <export>
    <moveit_core plugin="${prefix}/mara_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export> -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
</package>
